Code review, analyze code via SonarLint